--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,5 +5,9 @@ description = "Computes SHA-1 checksum for all the files in the specified direct
 readme = "README.md"
 requires-python = ">=3.12"
 
+dependencies = [
+    "click"
+]
+
 [project.scripts]
 pride_checksum = "pride_checksum.__main__:main"
