--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "pride-checksum"
-version = "0.0.8"
-description = "Computes SHA-1 checksum for all the files in the specified directory and writes to checksum.txt file."
+version = "0.0.9"
+description = "Computes SHA-1 checksum for all the specified files  and writes to checksum.txt file."
 readme = "README.md"
 requires-python = ">=3.12"
 
